# qt-pong

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  config.ini  game.cpp  qt-pong
include/: audio_config_window.h  ball.h  config.h  config_window.h  controls_config_window.h  main_window.h  multiplayer_game.h  multiplayer_window.h  paddle.h  player.h  scene.h  view.h
qt-pong_autogen/: mocs_compilation.cpp
qt-pong_autogen/6YEA5652QU/: moc_ball.cpp  moc_ball.cpp.d  moc_main_window.cpp  moc_main_window.cpp.d  moc_paddle.cpp  moc_paddle.cpp.d  moc_player.cpp  moc_player.cpp.d  moc_scene.cpp  moc_scene.cpp.d  moc_view.cpp  moc_view.cpp.d
qt-pong_autogen/include/: main_window.moc.d
src/: audio_config_window.cpp  ball.cpp  config.cpp  config_window.cpp  controls_config_window.cpp  main.cpp  main_window.cpp  multiplayer_game.cpp  multiplayer_window.cpp  paddle.cpp  player.cpp  scene.cpp  view.cpp
